--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lil-gui": "^0.18.2",
     "lodash": "^4.17.21",
     "three": "^0.155.0",
+    "three-mesh-bvh": "^0.6.8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "vue3-perfect-scrollbar": "^1.6.1",
